# WindesheimESA

./: AVR.code-workspace  ArduinoCore-avr-1.8.3.tar.xz  Windesheim.cpp  cpp.code-workspace
AVR/blink/src/: main.cpp
Cs/tasker/level1/: 1-1 De opdracht.md  1-2 Inrichten solution.md  1-3 Opzetten projecten.md  1-4 Test project.md  1-5 GIT repository.md
Cs/tasker/level2/: 2-1 Implementing interfaces.md  2-2 Implementing Classes.md  2-3 Using the model.md  2-4 Creating a race.md  2-5 Starting a race.md  2-6 Visualisation 1.md
MIC/: locations.json
MIC/ArduinoCoreLib/: CMakeLists.txt  cmakelist.txt
MIC/BlinkSerial/src/: main.cpp
MIC/BlinkSerialIC2/: CMakeLists.txt
MIC/BlinkSerialIC2/src/: main.cpp
MIC/Internet Time Stopwatch/src/: main.cpp
MIC/TWIlib/: CMakeLists.txt
MIC/TWIlib/src/: twi.c
MIC/Theremin/src/: main.cpp
MIC/USARTlib/: CMakeLists.txt
MIC/USARTlib/src/: usart.c  usart.h
MIC/WireLIB/: CMakeLists.txt
MIC/blink/: CMakeLists.txt  blink.elf
MIC/blink/src/: main.cpp
MIC/tasker/1-28/: DatasheetVerkenning.txt
MIC/tasker/1-30/: Asm verkenning.txt
MIC/tasker/2-14/: ans.txt
MIC/tasker/2-15/: CMakeLists.txt
MIC/tasker/3-3/: CMakeLists.txt
MIC/tasker/3-5 (untested)/: main.cpp  submain.cpp
MIC/tasker/3-6/: CMakeLists.txt
MIC/tasker/3-6 (untested) (unfinished)/: main.cpp
MIC/tasker/3-7/: cmake.txt
MIC/tasker/4-4/: CMakeLists.txt
cpp/Tentamen/: CMakeLists.txt  Kat.cpp  Kat.h  Siamees.cpp  Siamees.h  abc.txt  main  main.cpp  opdracht1  opdracht1.cpp  opdracht2  opdracht2.cpp  opdracht3  opdracht3.cpp  opdracht4  opdracht4.cpp  opdracht5  opdracht5.cpp  opg2_invoer1.txt  opg2_invoer2.txt  tentamen.h
cpp/Tentamen/main.dSYM/Contents/Resources/DWARF/: main
cpp/Tentamen/opdracht1.dSYM/Contents/: Info.plist
cpp/Tentamen/opdracht1.dSYM/Contents/Resources/DWARF/: opdracht1
cpp/Tentamen/opdracht2.dSYM/Contents/Resources/DWARF/: opdracht2
cpp/Tentamen/opdracht3.dSYM/Contents/Resources/DWARF/: opdracht3
cpp/Tentamen/opdracht4.dSYM/Contents/: Info.plist
cpp/Tentamen/opdracht4.dSYM/Contents/Resources/DWARF/: opdracht4
cpp/Tentamen/opdracht5.dSYM/Contents/Resources/DWARF/: opdracht5
cpp/helloworld/: helloworld
cpp/les/: main
cpp/les1/: les1  les1.cpp
cpp/oefententamen/: A_Capella  A_Capella.cpp  A_Capella.h  CMakeLists.txt  Muziekstuk.cpp  Muziekstuk.h  READ_ME.txt  invoer.txt  main  main.cpp  opdracht1  opdracht1.cpp  opdracht2  opdracht2.cpp  opdracht3  opdracht3.cpp  opdracht4  opdracht4.cpp  opdracht5  opdracht5.cpp  tentamen.h  uitvoer.txt
cpp/oefententamen/A_Capella.dSYM/Contents/: Info.plist
cpp/oefententamen/A_Capella.dSYM/Contents/Resources/DWARF/: A_Capella
cpp/oefententamen/main.dSYM/Contents/Resources/DWARF/: main
cpp/oefententamen/opdracht2.dSYM/Contents/: Info.plist
cpp/oefententamen/opdracht2.dSYM/Contents/Resources/DWARF/: opdracht2
cpp/oefententamen/opdracht3.dSYM/Contents/: Info.plist
cpp/oefententamen/opdracht3.dSYM/Contents/Resources/DWARF/: opdracht3
cpp/oefententamen/opdracht4.dSYM/Contents/Resources/DWARF/: opdracht4
cpp/oefententamen/opdracht5.dSYM/Contents/: Info.plist
cpp/oefententamen/opdracht5.dSYM/Contents/Resources/DWARF/: opdracht5
cpp/tasker/1-13/: main  main.cpp
cpp/tasker/1-14/: main  main.cpp
cpp/tasker/1-15/: main  main.cpp
cpp/tasker/1-16/: main  main.cpp
cpp/tasker/1-17/: main  main.cpp
cpp/tasker/1-18/: main  main.cpp
cpp/tasker/1-20/: attempt1.cpp  main  main.cpp
cpp/tasker/1-21/: main  main.cpp
cpp/tasker/1-22/: main  main.cpp
cpp/tasker/1-23/: main  main.cpp
cpp/tasker/1-24/: main  main.cpp
cpp/tasker/1-25/: main  main.cpp
cpp/tasker/1-26/: main  main.cpp
cpp/tasker/1-7/: main  main.cpp
cpp/tasker/1-8/: main  main.cpp
cpp/tasker/1-9/: main  main.cpp
cpp/tasker/2-1/: main  main.cpp
cpp/tasker/2-10/: main  main.cpp
cpp/tasker/2-2/: main  main.cpp
cpp/tasker/2-3/: main
cpp/tasker/2-4/: main  main.cpp  test.txt
cpp/tasker/2-5/: main  main.cpp  test.txt
cpp/tasker/2-6/: main  main.cpp  test.txt
cpp/tasker/2-7/: main  main.cpp  test.txt
cpp/tasker/2-8/: main  main.cpp
cpp/tasker/2-9/: main  main.cpp  test.txt
cpp/tasker/3-10/: main  main.cpp
cpp/tasker/3-11/: main  main.cpp
cpp/tasker/3-12/: main
cpp/tasker/3-13/: main.cpp
cpp/tasker/3-14/: main  main.cpp
cpp/tasker/3-15/: main  main.cpp  maintld.cpp
cpp/tasker/3-9/: main  main.cpp  menu.txt
cpp/tasker/4-10/: main  main.cpp
cpp/tasker/4-11/: main  main.cpp
cpp/tasker/4-12/: main  main.cpp
cpp/tasker/4-7/: main  main.cpp
cpp/tasker/4-8/: main  main.cpp
cpp/tasker/4-9/: main  main.cpp
cpp/tasker/5-10/: main  main.cpp
cpp/tasker/5-11/: main  main.cpp
cpp/tasker/5-12/: main  main.cpp
cpp/tasker/5-14/: main  main.cpp
cpp/tasker/5-15/: main.cpp
(+84 files in other folders)
